versioned_docs/version-4.1.x/reference/functions/Get-ADTPEFileArchitecture.mdx
---
id: Get-ADTPEFileArchitecture
title: Get-ADTPEFileArchitecture
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Determine if a PE file is a 32-bit or a 64-bit file.

## SYNTAX

### Path

```powershell
Get-ADTPEFileArchitecture -Path <String[]> [-PassThru] [<CommonParameters>]
```

### LiteralPath

```powershell
Get-ADTPEFileArchitecture -LiteralPath <String[]> [-PassThru] [<CommonParameters>]
```

### InputObject

```powershell
Get-ADTPEFileArchitecture -InputObject <FileInfo> [-PassThru] [<CommonParameters>]
```

## DESCRIPTION

Determine if a PE file is a 32-bit or a 64-bit file by examining the file's image file header.

PE file extensions: .exe, .dll, .ocx, .drv, .sys, .scr, .efi, .cpl, .fon

## EXAMPLES

### EXAMPLE 1

```powershell
Get-ADTPEFileArchitecture -FilePath "$env:windir\notepad.exe"
```

## PARAMETERS

### -Path

One or more expandable executable paths to retrieve info from.

```yaml
Type: String[]
Parameter Sets: Path
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### -LiteralPath

One or more literal executable paths to retrieve info from.

```yaml
Type: String[]
Parameter Sets: LiteralPath
Aliases: PSPath, FilePath

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InputObject

A FileInfo object to retrieve executable info from.
Available for pipelining.

```yaml
Type: FileInfo
Parameter Sets: InputObject
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -PassThru

Get the file object, attach a property indicating the file binary type, and write to pipeline.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### System.IO.FileInfo

### Accepts a FileInfo object from the pipeline.
## OUTPUTS

### System.String

### Returns a string indicating the file binary type.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Get-ADTPEFileArchitecture](https://psappdeploytoolkit.com/docs/reference/functions/Get-ADTPEFileArchitecture)
